k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-tracker-service
  labels:
    app: journal-tracker
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: journal-tracker
